Made gitignore and sudoku_solver in cpp

--- a/sudoku_solver.ipynb
+++ b/sudoku_solver.ipynb
@@ -272,7 +272,7 @@
     "                        board[row][col] = num\n",
     "                        # Recur with the updated board\n",
     "                        if solve_sudoku(board):\n",
-    "                            return True\n",
+    "                            return True \n",
     "                        # If the recursion does not lead to a solution, backtrack\n",
     "                        board[row][col] = 0\n",
     "                # If no number is valid, return to the previous recursive call and backtrack\n",
@@ -315,10 +315,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{{4,6,0,0,3,0,0,1,9},\n",
+      "                {8,9,0,1,0,2,0,3,4},\n",
+      "                {0,3,0,0,0,0,6,8,0},\n",
+      "                {1,7,0,0,4,0,0,2,0},\n",
+      "                {9,4,0,7,2,0,0,0,1},\n",
+      "                {0,5,2,0,9,1,0,0,0},\n",
+      "                {0,0,0,0,1,0,0,0,8},\n",
+      "                {5,0,0,6,0,7,0,4,0},\n",
+      "                {0,0,0,2,5,0,1,9,7}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\"\"[[4,6,0,0,3,0,0,1,9],\n",
+    "                [8,9,0,1,0,2,0,3,4],\n",
+    "                [0,3,0,0,0,0,6,8,0],\n",
+    "                [1,7,0,0,4,0,0,2,0],\n",
+    "                [9,4,0,7,2,0,0,0,1],\n",
+    "                [0,5,2,0,9,1,0,0,0],\n",
+    "                [0,0,0,0,1,0,0,0,8],\n",
+    "                [5,0,0,6,0,7,0,4,0],\n",
+    "                [0,0,0,2,5,0,1,9,7]]\"\"\".replace('[', '{').replace(']', '}'))"
+   ]
   }
  ],
  "metadata": {
