--- a/sudoku_solver.ipynb
+++ b/sudoku_solver.ipynb
@@ -19,7 +19,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "main_problem = [[int(\"0\") for _ in range(9)],\n",
+    "                [0,0,0,0,0,3,0,8,5],\n",
+    "                [0,0,1,0,2,0,0,0,0],\n",
+    "                [0,0,0,5,0,7,0,0,0],\n",
+    "                [0,0,4,0,0,0,1,0,0],\n",
+    "                [0,9,0,0,0,0,0,0,0],\n",
+    "                [5,0,0,0,0,0,0,7,3],\n",
+    "                [0,0,2,0,1,0,0,0,0],\n",
+    "                [0,0,0,0,4,0,0,0,9]\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -42,41 +60,41 @@
      "output_type": "stream",
      "text": [
       "(9, 3, 3)\n",
-      "[[[4 6 0]\n",
-      "  [8 9 0]\n",
-      "  [0 3 0]]\n",
+      "[[[0 0 0]\n",
+      "  [0 0 0]\n",
+      "  [0 0 1]]\n",
       "\n",
-      " [[0 3 0]\n",
-      "  [1 0 2]\n",
-      "  [0 0 0]]\n",
+      " [[0 0 0]\n",
+      "  [0 0 3]\n",
+      "  [0 2 0]]\n",
       "\n",
-      " [[0 1 9]\n",
-      "  [0 3 4]\n",
-      "  [6 8 0]]\n",
-      "\n",
-      " [[1 7 0]\n",
-      "  [9 4 0]\n",
-      "  [0 5 2]]\n",
-      "\n",
-      " [[0 4 0]\n",
-      "  [7 2 0]\n",
-      "  [0 9 1]]\n",
-      "\n",
-      " [[0 2 0]\n",
-      "  [0 0 1]\n",
+      " [[0 0 0]\n",
+      "  [0 8 5]\n",
       "  [0 0 0]]\n",
       "\n",
       " [[0 0 0]\n",
-      "  [5 0 0]\n",
+      "  [0 0 4]\n",
+      "  [0 9 0]]\n",
+      "\n",
+      " [[5 0 7]\n",
+      "  [0 0 0]\n",
       "  [0 0 0]]\n",
       "\n",
-      " [[0 1 0]\n",
-      "  [6 0 7]\n",
-      "  [2 5 0]]\n",
+      " [[0 0 0]\n",
+      "  [1 0 0]\n",
+      "  [0 0 0]]\n",
       "\n",
-      " [[0 0 8]\n",
-      "  [0 4 0]\n",
-      "  [1 9 7]]]\n"
+      " [[5 0 0]\n",
+      "  [0 0 2]\n",
+      "  [0 0 0]]\n",
+      "\n",
+      " [[0 0 0]\n",
+      "  [0 1 0]\n",
+      "  [0 4 0]]\n",
+      "\n",
+      " [[0 7 3]\n",
+      "  [0 0 0]\n",
+      "  [0 0 9]]]\n"
      ]
     }
    ],
@@ -88,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -106,16 +124,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[4, 6, 0], [8, 9, 0], [0, 3, 0]], [[0, 3, 0], [1, 0, 2], [0, 0, 0]], [[0, 1, 9], [0, 3, 4], [6, 8, 0]]]\n",
-      "[[[1, 7, 0], [9, 4, 0], [0, 5, 2]], [[0, 4, 0], [7, 2, 0], [0, 9, 1]], [[0, 2, 0], [0, 0, 1], [0, 0, 0]]]\n",
-      "[[[0, 0, 0], [5, 0, 0], [0, 0, 0]], [[0, 1, 0], [6, 0, 7], [2, 5, 0]], [[0, 0, 8], [0, 4, 0], [1, 9, 7]]]\n"
+      "[[[0, 0, 0], [0, 0, 0], [0, 0, 1]], [[0, 0, 0], [0, 0, 3], [0, 2, 0]], [[0, 0, 0], [0, 8, 5], [0, 0, 0]]]\n",
+      "[[[0, 0, 0], [0, 0, 4], [0, 9, 0]], [[5, 0, 7], [0, 0, 0], [0, 0, 0]], [[0, 0, 0], [1, 0, 0], [0, 0, 0]]]\n",
+      "[[[5, 0, 0], [0, 0, 2], [0, 0, 0]], [[0, 0, 0], [0, 1, 0], [0, 4, 0]], [[0, 7, 3], [0, 0, 0], [0, 0, 9]]]\n"
      ]
     }
    ],
@@ -224,22 +242,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[4, 6, 7, 5, 3, 8, 2, 1, 9]\n",
-      "[8, 9, 5, 1, 6, 2, 7, 3, 4]\n",
-      "[2, 3, 1, 4, 7, 9, 6, 8, 5]\n",
-      "[1, 7, 8, 3, 4, 5, 9, 2, 6]\n",
-      "[9, 4, 3, 7, 2, 6, 8, 5, 1]\n",
-      "[6, 5, 2, 8, 9, 1, 4, 7, 3]\n",
-      "[7, 2, 4, 9, 1, 3, 5, 6, 8]\n",
-      "[5, 1, 9, 6, 8, 7, 3, 4, 2]\n",
-      "[3, 8, 6, 2, 5, 4, 1, 9, 7]\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\shash\\Desktop\\Code\\VSC\\algo\\sudoku_solver.ipynb Cell 12\u001b[0m line \u001b[0;36m3\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/shash/Desktop/Code/VSC/algo/sudoku_solver.ipynb#X13sZmlsZQ%3D%3D?line=33'>34</a>\u001b[0m     \u001b[39m# If all cells are filled, the puzzle is solved\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/shash/Desktop/Code/VSC/algo/sudoku_solver.ipynb#X13sZmlsZQ%3D%3D?line=34'>35</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/shash/Desktop/Code/VSC/algo/sudoku_solver.ipynb#X13sZmlsZQ%3D%3D?line=36'>37</a>\u001b[0m \u001b[39mif\u001b[39;00m solve_sudoku(main_problem):\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/shash/Desktop/Code/VSC/algo/sudoku_solver.ipynb#X13sZmlsZQ%3D%3D?line=37'>38</a>\u001b[0m     \u001b[39mfor\u001b[39;00m row \u001b[39min\u001b[39;00m main_problem:\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/shash/Desktop/Code/VSC/algo/sudoku_solver.ipynb#X13sZmlsZQ%3D%3D?line=38'>39</a>\u001b[0m         \u001b[39mprint\u001b[39m(row)\n",
+      "\u001b[1;32mc:\\Users\\shash\\Desktop\\Code\\VSC\\algo\\sudoku_solver.ipynb Cell 12\u001b[0m line \u001b[0;36m2\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/shash/Desktop/Code/VSC/algo/sudoku_solver.ipynb#X13sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m board[row][col] \u001b[39m=\u001b[39m num\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/shash/Desktop/Code/VSC/algo/sudoku_solver.ipynb#X13sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m \u001b[39m# Recur with the updated board\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/shash/Desktop/Code/VSC/algo/sudoku_solver.ipynb#X13sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m \u001b[39mif\u001b[39;00m solve_sudoku(board):\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/shash/Desktop/Code/VSC/algo/sudoku_solver.ipynb#X13sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mTrue\u001b[39;00m \n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/shash/Desktop/Code/VSC/algo/sudoku_solver.ipynb#X13sZmlsZQ%3D%3D?line=29'>30</a>\u001b[0m \u001b[39m# If the recursion does not lead to a solution, backtrack\u001b[39;00m\n",
+      "\u001b[1;32mc:\\Users\\shash\\Desktop\\Code\\VSC\\algo\\sudoku_solver.ipynb Cell 12\u001b[0m line \u001b[0;36m2\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/shash/Desktop/Code/VSC/algo/sudoku_solver.ipynb#X13sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m board[row][col] \u001b[39m=\u001b[39m num\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/shash/Desktop/Code/VSC/algo/sudoku_solver.ipynb#X13sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m \u001b[39m# Recur with the updated board\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/shash/Desktop/Code/VSC/algo/sudoku_solver.ipynb#X13sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m \u001b[39mif\u001b[39;00m solve_sudoku(board):\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/shash/Desktop/Code/VSC/algo/sudoku_solver.ipynb#X13sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mTrue\u001b[39;00m \n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/shash/Desktop/Code/VSC/algo/sudoku_solver.ipynb#X13sZmlsZQ%3D%3D?line=29'>30</a>\u001b[0m \u001b[39m# If the recursion does not lead to a solution, backtrack\u001b[39;00m\n",
+      "    \u001b[1;31m[... skipping similar frames: solve_sudoku at line 28 (31 times)]\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\shash\\Desktop\\Code\\VSC\\algo\\sudoku_solver.ipynb Cell 12\u001b[0m line \u001b[0;36m2\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/shash/Desktop/Code/VSC/algo/sudoku_solver.ipynb#X13sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m board[row][col] \u001b[39m=\u001b[39m num\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/shash/Desktop/Code/VSC/algo/sudoku_solver.ipynb#X13sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m \u001b[39m# Recur with the updated board\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/shash/Desktop/Code/VSC/algo/sudoku_solver.ipynb#X13sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m \u001b[39mif\u001b[39;00m solve_sudoku(board):\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/shash/Desktop/Code/VSC/algo/sudoku_solver.ipynb#X13sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mTrue\u001b[39;00m \n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/shash/Desktop/Code/VSC/algo/sudoku_solver.ipynb#X13sZmlsZQ%3D%3D?line=29'>30</a>\u001b[0m \u001b[39m# If the recursion does not lead to a solution, backtrack\u001b[39;00m\n",
+      "\u001b[1;32mc:\\Users\\shash\\Desktop\\Code\\VSC\\algo\\sudoku_solver.ipynb Cell 12\u001b[0m line \u001b[0;36m2\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/shash/Desktop/Code/VSC/algo/sudoku_solver.ipynb#X13sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m \u001b[39mif\u001b[39;00m board[row][col] \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/shash/Desktop/Code/VSC/algo/sudoku_solver.ipynb#X13sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m     \u001b[39m# Try filling the cell with numbers from 1 to 9\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/shash/Desktop/Code/VSC/algo/sudoku_solver.ipynb#X13sZmlsZQ%3D%3D?line=23'>24</a>\u001b[0m     \u001b[39mfor\u001b[39;00m num \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m1\u001b[39m, \u001b[39m10\u001b[39m):\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/shash/Desktop/Code/VSC/algo/sudoku_solver.ipynb#X13sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m         \u001b[39mif\u001b[39;00m is_valid(board, row, col, num):\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/shash/Desktop/Code/VSC/algo/sudoku_solver.ipynb#X13sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m             board[row][col] \u001b[39m=\u001b[39m num\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/shash/Desktop/Code/VSC/algo/sudoku_solver.ipynb#X13sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m             \u001b[39m# Recur with the updated board\u001b[39;00m\n",
+      "\u001b[1;32mc:\\Users\\shash\\Desktop\\Code\\VSC\\algo\\sudoku_solver.ipynb Cell 12\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/shash/Desktop/Code/VSC/algo/sudoku_solver.ipynb#X13sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(start_row, start_row \u001b[39m+\u001b[39m \u001b[39m3\u001b[39m):\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/shash/Desktop/Code/VSC/algo/sudoku_solver.ipynb#X13sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m     \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(start_col, start_col \u001b[39m+\u001b[39m \u001b[39m3\u001b[39m):\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/shash/Desktop/Code/VSC/algo/sudoku_solver.ipynb#X13sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m         \u001b[39mif\u001b[39;00m board[i][j] \u001b[39m==\u001b[39m num:\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/shash/Desktop/Code/VSC/algo/sudoku_solver.ipynb#X13sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m             \u001b[39mreturn\u001b[39;00m \u001b[39mFalse\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/shash/Desktop/Code/VSC/algo/sudoku_solver.ipynb#X13sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mTrue\u001b[39;00m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
